# kubernetes-webhooks

./: .gitignore  CODEOWNERS  README.md
.circleci/: config.yml
docker-proxy-webhook/: Dockerfile  PROJECT  README.md  go.mod  go.sum  main.go
docker-proxy-webhook/api/v1/: docker_proxy_mutating_webhook.go  docker_proxy_mutating_webhook_test.go
docker-proxy-webhook/manifests/: k8s.yaml
pod-rate-limiter/: Cargo.toml  Dockerfile  README.md
pod-rate-limiter/manifests/: k8s.yaml
pod-rate-limiter/src/: controller.rs  logging.rs  main.rs  mutating_webhook.rs
