[package]
name = "pod-rate-limiter"
version = "0.1.0"
authors = ["Kevin Pullin <kevinp@nexttrucking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = { version = "3.3.2", features = ["rustls"] }
futures = "0.3.8"
kube = { version = "0.45.0" } # rustls doesn't work locally w/ minikube , features features = ["rustls-tls"], default-features=false }
kube-runtime = { version = "0.45.0" } #, features = ["rustls-tls"], default-features=false }
k8s-openapi = { version = "0.10.0", features = ["v1_16"], default-features=false }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "0.2.24", features = ["macros"] }
env_logger = "0.8.2"
json-patch = "0.2.6"
rustls = "0.18.0"
base64 = "0.13.0"
