[package]
name = "pod-rate-limiter"
version = "0.1.0"
authors = ["Kevin Pullin <kevinp@nexttrucking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-web-prom = "0.5"
anyhow = "1.0.38"
base64 = "0.13.0"
env_logger = "0.8.2"
futures = "0.3.8"
json-patch = "0.2.6"
kube = { version = "0.45.0" } # rustls doesn't work locally w/ minikube. See https://github.com/briansmith/webpki/issues/54
kube-runtime = { version = "0.45.0" }
k8s-openapi = { version = "0.10.0", features = ["v1_16"], default-features = false }
openssl = "0.10"
prometheus = { version = "0.11", features = ["process"], default-features = false }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
time = "0.2.24"
tokio = { version = "0.2.24", features = ["macros"] }

